Fixed layout issue caused by top-level grid scaffold.
Added `#scaffold` container to ensure the scaffold grid only contains visible elements.
- i.e. `#dialog_scrim` and `#dialog_container` are now outside of the grid.
- Moved `#scaffold` styling to `v2/core`
- Added `grid-template-columns: 100%;`
  - Fixes issue of child `pre` elements preventing the whole layout from shrinking below
    the width of those elements.

--- a/beatonma-gulp/src/apps/main/scss/v2/objects/_body.scss
+++ b/beatonma-gulp/src/apps/main/scss/v2/objects/_body.scss
@@ -9,55 +9,4 @@ body {
   min-height: 100%;
   margin: 0;
   padding: 0;
-  display: grid;
-  grid-template-rows: auto 1fr auto;
-
-  > header {
-    grid-row: 1;
-  }
-
-  > #content_wrapper {
-    grid-row: 2;
-  }
-
-  > footer {
-    grid-row: 3;
-  }
-
-  > header,
-  > footer,
-  > #content_wrapper {
-    @extend %-content_margins;
-  }
-}
-
-$-margin-comfy: 32px;
-$-margin-small: 8px;
-$-margin-minimal: 4px;
-%-content_margins {
-  margin-inline: $-margin-comfy;
-  --main-content-width: calc(100svw - (2 * #{$-margin-comfy}));
-
-  @include core.on-medium-width {
-    margin-inline: $-margin-small;
-    --main-content-width: calc(100svw - (2 * #{$-margin-small}));
-  }
-
-  @include core.on-small-width {
-    margin-inline: $-margin-minimal;
-    --main-content-width: calc(100svw - (2 * #{$-margin-minimal}));
-  }
-}
-
-%full-bleed {
-  // Undoes the effects of %-content-margins for an element.
-  margin-inline: -$-margin-comfy;
-
-  @include core.on-medium-width {
-    margin-inline: -$-margin-small;
-  }
-
-  @include core.on-small-width {
-    margin-inline: -$-margin-minimal;
-  }
 }
